--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <a href="#">ভর্তি</a>
     <a href="#">যোগাযোগ</a>
 </nav>
-
+<img src="school.jpg" width="100%">
 <section>
     <div class="card">
         <h2>আমাদের লক্ষ্য</h2>
